force-app/main/default/objects/ESG_Initiative__c.object
<CustomObject>
    <description>Used to track specific initiatives the organization undertakes to improve ESG KPIs.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Emissions_Savings_tCO2e__c</fullName>
        <label>Total Emissions Savings (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>ESG Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Emissions_Savings_tCO2e__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ESG Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESG Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>