force-app/main/default/objects/ESG_Initiative__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Emissions_Savings_tCO2e__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>